tests/error/linear_errors/enum_unused_field1.err
Error: Drop violation (at $FILE:12:8)
   | 
10 | 
11 | @guppy
12 | def foo(s: MyEnum @owned) -> int:
   |         ^^^^^^^^^^^^^^^^ Variable `s` with non-droppable type `MyEnum` is leaked

Help: Make sure that `s` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
